2008-10-22  Omair Majid  <omajid@redhat.com>

	* rt/net/sourceforge/nanoxml/XMLElement.java 
	(sanitizeInput): Fix for last character of the jnlp file being ignored.

2008-10-22  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added quotes around DIST_ID.

2008-10-22  Andrew Haley  <aph@redhat.com>

	* patches/icedtea-xjc.patch: New.

2008-10-21  Deepak Bhole  <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Implemented JVM respawning.
	* plugin/icedtea/sun/applet/PluginAppletSecurityContext.java: Prepopulate
	classes requested by LiveConnect at initialization.
	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Fix panel applet
	resizing when window height and width is in %.
	* plugin/icedtea/sun/applet/PluginMain.java: Handle error during NetX
	initialization gracefully.

2008-10-21  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Add new option --with-pkgversion,
	substitute PKGVERSION and DIST_ID.
	* Makefile.am (ICEDTEA_ENV): Add DISTRIBUTION_ID;
	(stamps/patch.stamp): Encode PKGVERSION in IcedTea version.
	* patches/icedtea-version.patch: Add DISTRIBUTION_ID in vm crash report.

2008-10-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* HACKING: Add new patch.
	* Makefile.am: Compile PulseAudio Java
	files with debugging information.
	* patches/icedtea-ecj.patch: Regenerated.
	* patches/icedtea-javac-debuginfo.patch:
	Ensure JAXWS, JAXP, CORBA and the language
	tools include debugging information.

2008-10-20  Lillian Angel  <langel@redhat.com>

	* Makefile.am
	(EXTRA_DIST): Added plugin dir.

2008-10-20  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Changed all instances of $(srcdir) to
	$(abs_top_srcdir).

2008-10-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Use GCJ if not equal to no instead
	of being empty.
	* acinclude.m4:
	(AC_CHECK_WITH_GCJ): New macro.
	* configure.ac:
	Use AC_CHECK_WITH_GCJ in preference to
	just checking for GCJ.

2008-10-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: