@@ -171,9 +171,8 @@ ICEDTEA_ENV = \
 	"ALT_PARALLEL_COMPILE_JOBS=$(PARALLEL_JOBS)" \
 	"HOTSPOT_BUILD_JOBS=$(PARALLEL_JOBS)" \
 	"JAVAC=" \
-	"RHINO_JAR=$(RHINO_JAR)"
-
-ICEDTEA_ENV += $(if $(DIST_ID),"DISTRIBUTION_ID="$(DIST_ID)"")
+	"RHINO_JAR=$(RHINO_JAR)" \
+	"DISTRIBUTION_ID=$(DIST_ID)"
 
 if WITH_CACAO
 ICEDTEA_ENV += \
